--- a/album.html
+++ b/album.html
@@ -11,6 +11,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
   <body>
     <header>
@@ -44,7 +45,7 @@
     <section class="album">
       <h5 class="d-inline album-title">Álbum</h5>
       <input type="checkbox" class="heart-checkbox" id="myHeart">
-      <label class="heart-label d-inline ms-2" for="myHeart"><img src="assets/img/heart.png" class="heart-img"></label>
+      <label class="heart-label d-inline ms-2" for="myHeart"><i class="bi bi-heart"></i></label>
       <hr size="0" width="100%" />
       <div class="row">
         <div class="col-4" id="sobre">
